--- a/bower.json
+++ b/bower.json
@@ -5,23 +5,17 @@
     "curran <curran.kelleher@gmail.com>"
   ],
   "description": "Boilerplate structure for starting a JavaScript project that uses Require.js, Jasmine and Bower.",
-  "main": "index.html",
-  "moduleType": [
-    "amd"
-  ],
-  "keywords": [
-    "Boilerplate"
-  ],
   "license": "MIT",
   "homepage": "https://github.com/curran/JSProjectTemplate",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "test",
-    "tests"
+    "spec"
   ],
   "dependencies": {
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "requirejs": "~2.1.11",
+    "jasmine": "~2.0.0"
   }
 }
