--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "grunt": "~0.4.4",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-docco": "~0.3.3"
+    "grunt-docco": "~0.3.3",
+    "grunt-contrib-jshint": "~0.10.0"
   }
 }
