--- a/package.json
+++ b/package.json
@@ -3,18 +3,11 @@
   "version": "0.0.1",
   "author": "Curran Kelleher <curran.kelleher@gmail.com>",
   "description": "An example project.",
-  "dependencies": {
-    "express": "*"
-  },
   "devDependencies": {
     "express": "^4.0.0",
-    "grunt": "~0.4.4",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-jasmine": "^0.6.3",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-docco": "^0.3.3",
-    "grunt-umd": "^1.7.3",
-    "load-grunt-tasks": "^0.4.0"
+    "gulp": "^3.6.2",
+    "gulp-mocha": "^0.4.1",
+    "gulp-requirejs": "^0.1.3",
+    "requirejs": "^2.1.11"
   }
 }
