--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "chai": "^1.9.1",
     "express": "^4.0.0",
     "gulp": "^3.6.2",
+    "gulp-jshint": "^1.5.5",
     "gulp-mocha": "^0.4.1",
     "gulp-requirejs": "^0.1.3",
+    "jshint-stylish": "^0.1.5",
     "requirejs": "^2.1.11"
   }
 }
