--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chai": "^1.9.1",
     "express": "^4.0.0",
     "gulp": "^3.6.2",
+    "gulp-docco": "0.0.4",
     "gulp-jshint": "^1.5.5",
     "gulp-mocha": "^0.4.1",
     "gulp-requirejs": "^0.1.3",
