Cleaned up files

--- a/bower.json
+++ b/bower.json
@@ -4,14 +4,10 @@
   "authors": [
     "curran <curran.kelleher@gmail.com>"
   ],
-  "description": "Boilerplate structure for starting a JavaScript project that uses Require.js, Jasmine and Bower.",
+  "description": "Boilerplate structure for starting a JavaScript project.",
   "license": "MIT",
   "homepage": "https://github.com/curran/JSProjectTemplate",
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "spec"
   ],
   "dependencies": {
     "lodash": "~2.4.1",
