--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-jshint": "^1.5.5",
     "gulp-mocha": "^0.4.1",
     "gulp-requirejs": "^0.1.3",
+    "gulp-uglify": "^0.2.1",
     "jshint-stylish": "^0.1.5",
     "requirejs": "^2.1.11"
   }
