Added gulp rename for creating both minified and non-minified releases

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "gulp-uglify": "^0.2.1",
     "jshint-stylish": "^0.1.5",
     "requirejs": "^2.1.11"
+  },
+  "dependencies": {
+    "gulp-rename": "^1.2.0"
   }
 }
