Added ignore glob to bower.json

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "homepage": "https://github.com/curran/JSProjectTemplate",
   "ignore": [
+    "**/*",
+    "!dist"
   ],
   "dependencies": {
     "lodash": "~2.4.1",
