--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "gulp-requirejs": "^0.1.3",
     "gulp-uglify": "^0.2.1",
     "jshint-stylish": "^0.1.5",
-    "requirejs": "^2.1.11"
-  },
-  "dependencies": {
+    "requirejs": "^2.1.11",
     "gulp-rename": "^1.2.0"
-  }
+  },
+  "dependencies": { }
 }
