--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "gulp-docco": "0.0.4",
     "gulp-jshint": "^1.5.5",
     "gulp-mocha": "^0.4.1",
+    "gulp-rename": "^1.2.0",
     "gulp-requirejs": "^0.1.3",
     "gulp-uglify": "^0.2.1",
     "jshint-stylish": "^0.1.5",
-    "requirejs": "^2.1.11",
-    "gulp-rename": "^1.2.0"
+    "requirejs": "^2.1.11"
   },
-  "dependencies": { }
+  "dependencies": {}
 }
